--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,11 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: 
-  recolorize
 Depends:
   R (>= 2.10),
   magrittr,
   dplyr,
   tibble,
-  parallel
-RoxygenNote: 7.2.3
+  parallel,
+  recolorize
+RoxygenNote: 7.3.1
