:art: refactor codebase #19

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,5 @@
 S3method(plot,charisma)
 export(charisma)
 export(charisma2)
-export(charisma_to_img)
-export(get_mapped_hex)
-export(load_image)
-export(parse_color)
-export(pavo_classify_charisma)
+export(color2label)
+export(validate_lut)
