feat: add summarize/se function #21

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ S3method(plot,charisma)
 export(charisma)
 export(charisma2)
 export(color2label)
+export(summarise)
+export(summarize)
 export(validate_lut)
