--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,charisma)
 export(charisma)
 export(charisma2)
 export(color2label)
+export(mosaic)
 export(summarise)
 export(summarize)
 export(validate)
