--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,28 @@
 ^charisma\.Rproj$
 ^\.Rproj\.user$
+^README\.Rmd$
+^cran-comments\.md$
+^data-raw$
+^pkgdown$
+^_pkgdown\.yml$
+^\.github$
+^Makefile$
+^\.lintr$
+^LICENSE\.md$
+^\.Rproj\.user$
+^docs$
+^derivatives$
+^data-raw/sticker\.R$
+^data/sticker\.rda$
+^R/sticker\.data\.R$
+^CODE_OF_CONDUCT\.md$
+^CONTRIBUTING\.md$
+^CRAN-SUBMISSION$
+^inst/figures$
+^doc$
+^Meta$
+^\.air\.toml$
+^\.claude$
+^README\.html$
+\.DS_Store$
+^man/figures/create_logo\.R$
