--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,31 @@ export(mosaic)
 export(summarise)
 export(summarize)
 export(validate)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,select)
+importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
+importFrom(grDevices,as.raster)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,png)
+importFrom(grDevices,rgb)
+importFrom(grDevices,rgb2hsv)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,image)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,rect)
+importFrom(magrittr,"%>%")
+importFrom(purrr,map)
+importFrom(recolorize,readImage)
+importFrom(stats,aggregate)
+importFrom(stats,setNames)
+importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,drop_na)
+importFrom(utils,combn)
