--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,6 +41,11 @@ jobs:
         run: |
           brew install libpng libjpeg libtiff fftw
 
+      - name: Configure R (macOS - install from source)
+        if: runner.os == 'macOS'
+        run: |
+          echo 'options(pkgType = "source")' >> ~/.Rprofile
+
       - name: install deps
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
