--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,7 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {os: macos-latest,   r: 'release'}
+        # Temporarily disable macOS due to segfaults in binary packages on GH Actions
+        # - {os: macos-latest,   r: 'release'}
         - {os: windows-latest, r: 'release'}
         - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
         - {os: ubuntu-latest,   r: 'release'}
@@ -35,16 +36,6 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
-
-      - name: Install system dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install libpng libjpeg libtiff fftw
-
-      - name: Configure R (macOS - install from source)
-        if: runner.os == 'macOS'
-        run: |
-          echo 'options(pkgType = "source")' >> ~/.Rprofile
 
       - name: install deps
         uses: r-lib/actions/setup-r-dependencies@v2
