Enable macOS in R-CMD-check workflow matrix
Reactivates macOS-latest in the workflow matrix and updates YAML formatting for consistency. This change allows CI checks to run on macOS, Windows, and Ubuntu environments.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: main
   pull_request:
-    branches: [ main, release/** ]
+    branches: [main, release/**]
 
 permissions: read-all
 
@@ -16,12 +16,11 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        # Temporarily disable macOS due to segfaults in binary packages on GH Actions
-        # - {os: macos-latest,   r: 'release'}
-        - {os: windows-latest, r: 'release'}
-        - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-        - {os: ubuntu-latest,   r: 'release'}
-        - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - { os: macos-latest, r: "release" }
+          - { os: windows-latest, r: "release" }
+          - { os: ubuntu-latest, r: "devel", http-user-agent: "release" }
+          - { os: ubuntu-latest, r: "release" }
+          - { os: ubuntu-latest, r: "oldrel-1" }
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
