--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(grDevices,as.raster)
+importFrom(grDevices,dev.cur)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
@@ -27,9 +28,11 @@ importFrom(graphics,image)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,rect)
+importFrom(imager,imresize)
+importFrom(imager,imrotate)
+importFrom(imager,load.image)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
-importFrom(recolorize,readImage)
 importFrom(stats,aggregate)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
