--- a/.github/workflows/R-CMD-check-build.yml
+++ b/.github/workflows/R-CMD-check-build.yml
@@ -29,6 +29,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Install XQuartz on macOS
+        if: runner.os == 'macOS'
+        run: brew install --cask xquartz
+
       - name: set up R ${{ matrix.r-version }}
         uses: r-lib/actions/setup-r@v2
         with:
