--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,6 +15,8 @@ template:
   includes:
     in_header: |
       <link rel="stylesheet" href="extra.css">
+      <script async src="https://cdn.seline.com/seline.js"
+      data-token="2162fe5e9da2b07"></script>
 
 navbar:
   structure:
