--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         config:
         # Temporarily disable macOS due to segfaults in binary packages on GH Actions
-        - {os: macos-latest,   r: 'release'}
+        # - {os: macos-latest,   r: 'release'}
         - {os: windows-latest, r: 'release'}
         # NOTE: R-devel temporarily disabled due to Rcpp 1.1.0 incompatibility
         # with R-devel (R_ext/PrtUtil.h removed). Re-enable when Rcpp is updated.
