--- a/.github/workflows/wiki-from-vignettes.yml
+++ b/.github/workflows/wiki-from-vignettes.yml
@@ -15,6 +15,8 @@ permissions:
 jobs:
   update-wiki:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout repo
