Add launch_clut_editor and documentation
Introduce launch_clut_editor() to open the interactive CLUT (Color Look-Up Table) Editor (online or local). Implements the function (R/clut_editor.R) which opens the hosted app or a bundled local index.html (errors if local app is missing) and invisibly returns the opened URL. Exported the new function in NAMESPACE and added a roxygen-generated man page (man/launch_clut_editor.Rd). Update README.Rmd and README.md to document usage, features, and include a small image attribute fix.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,charisma)
 export(charisma)
 export(charisma2)
 export(color2label)
+export(launch_clut_editor)
 export(mosaic)
 export(summarise)
 export(summarize)
